--- a/APM-Start/src/app/app.component.html
+++ b/APM-Start/src/app/app.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand navbar-light bg-light">
-  <a class="navbar-brand">{{pageTitle}}</a>
+  <a class="navbar-brand" >{{pageTitle}}</a>
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link">Home</a>
+      <a class="nav-link" [routerLink]="['/welcome']">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link">Product List</a>
+      <a class="nav-link" [routerLink]="['/products']">Product List</a>
     </li>
     <li class="nav-item">
       <a class="nav-link">Add Product</a>
@@ -21,7 +21,7 @@
     </li>
     <li class="nav-item"
         *ngIf="!isLoggedIn">
-      <a class="nav-link">Log In</a>
+      <a class="nav-link" [routerLink]="['/login']">Log In</a>
     </li>
     <li class="nav-item"
         *ngIf="isLoggedIn">
@@ -31,5 +31,5 @@
   </ul>
 </nav>
 <div class="container">
-  <pm-home></pm-home>
+ <router-outlet></router-outlet>
 </div>
